Revert "fix: minimize header blob on safari clipping"
This reverts commit 5ed7cab4b91a9412c56d8f95dffdcb29b5b4a8d8.

--- a/styles/global.css
+++ b/styles/global.css
@@ -133,11 +133,6 @@
   background-color: var(--surface-container-high) !important;
 }
 
-.skc-page-header__minimized .skc-page-header__blobs {
-  overflow: visible !important;
-  overflow-clip-margin: unset !important;
-}
-
 /* Inset card support
   Temporary until the SK Components library is updated.
   PS: this is not good code. Please don’t learn from this.
